--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,57 @@
 body {
-    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+
+section {
+  // background-color: white;
+  // // height: 100vh;
+  // width: 100%;
+  // display: flex;
+  // align-items: center;
+  // justify-content: center;
+  // padding: 5rem;
+  & > div {
+    height: 300px;
+    width: 200px;
+  }
+}
+
+.selector {
+  width: 180px;
+  position: relative;
+  & > * {
+    &:first-child {
+      width: 100%;
+      border: 1px solid black;
+      border-radius: 5px;
+      padding: 1px 5px;
+      height: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      & > p {
+        font-size: 14px;
+      }
+      & > * {
+        &:last-child {
+          font-size: 15px;
+        }
+      }
+    }
+
+    &:last-child {
+      position: absolute;
+      border: 1px solid black;
+      border-radius: 5px;
+      padding: 8px 5px;
+      width: 100%;
+      & > * {
+        padding: 5px 2px;
+        font-size: 12px;
+      }
+    }
+  }
 }
