--- a/src/App.scss
+++ b/src/App.scss
@@ -21,9 +21,11 @@ section {
 
 .selector {
   width: 180px;
+  
   position: relative;
   & > * {
     &:first-child {
+      cursor: pointer;
       width: 100%;
       border: 1px solid black;
       border-radius: 5px;
@@ -47,6 +49,7 @@ section {
       border: 1px solid black;
       border-radius: 5px;
       padding: 8px 5px;
+      cursor: pointer;
       width: 100%;
       & > * {
         padding: 5px 2px;
